# lensfun-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.rs  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: audit.yml  ci.yml
data/db/: README.md
docs/: architecture.md  comparison-with-c-library.md  design-principles.md  style-guide.md
docs/notes/: handoff-2026-04-18.md
src/: auxfun.rs  calib.rs  camera.rs  db.rs  error.rs  lens.rs  lib.rs  mod_color.rs  mod_coord.rs  mod_pc.rs  mod_subpix.rs  modifier.rs  mount.rs
src/mod_coord/: distortion.rs  geometry.rs  mod.rs
tests/: bundled_db.rs  color.rs  database.rs  distortion.rs  geometry.rs  lens.rs  lffuzzystrcmp.rs  matchscore.rs  modifier.rs  perspective.rs  subpix.rs
tests/cpp-vs-rust/: .clangd  README.md  build.sh  harness.rs  justfile  probe  probe.cpp
tests/integration/: bundled_db.rs  color.rs  database.rs  distortion.rs  geometry.rs  lens.rs  lffuzzystrcmp.rs  matchscore.rs  modifier.rs  perspective.rs  subpix.rs
