[package]
name = "lensfun"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "LGPL-3.0-or-later"
description = "Pure-Rust port of LensFun: camera lens correction (distortion, TCA, vignetting) without C dependencies"
repository = "https://github.com/vdavid/lensfun-rs"
homepage = "https://github.com/vdavid/lensfun-rs"
keywords = ["lens", "camera", "distortion", "vignetting", "photography"]
categories = ["multimedia::images", "graphics", "multimedia"]
readme = "README.md"
documentation = "https://docs.rs/lensfun"
exclude = [
    ".github/",
    "AGENTS.md",
    "CONTRIBUTING.md",
    "docs/",
    "justfile",
    "deny.toml",
    "clippy.toml",
    "rustfmt.toml",
    "proptest-regressions/",
    "related-repos/",
    "scripts/",
    "tests/cpp-vs-rust/",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# XML database parsing. roxmltree is small, fast, and pure-Rust.
roxmltree = "0.20"

# Regex for lfLens::GuessParameters (3 fixed patterns).
regex = "1"

# Error types.
thiserror = "2"

# Decompress the bundled XML database at runtime (compressed at build time).
flate2 = "1"

[build-dependencies]
# Compress data/db/*.xml at build time. Runtime only needs the matching
# `flate2` in [dependencies] for decompression.
flate2 = "1"

[[example]]
name = "ab_compare"
path = "tests/cpp-vs-rust/harness.rs"

[dev-dependencies]
proptest = "1"
approx = "0.5"
